[package]
name = "m3u8-dl"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.83"
repository = "https://github.com/inkroom/m3u8-dl"
homepage = "https://github.com/inkroom/m3u8-dl"
readme = "README.md"
description = "a cli tool for download m3u8 video"
exclude = ["/.github"]
[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-queue"] }
log = "0.4.22"
log4rs = {version="1.3.0",default-features=false,features=["console_appender","file_appender"]}

m3u8-rs = "6.0.0"
reqwest = {version = "0.12.9",features=["blocking","rustls-tls"],default-features=false,optional=true}
rust-crypto = "0.2.36"
ureq = {version = "2.12.1",optional=true}
url = "2.5.4"

[target.'cfg(not(target_os="windows"))'.dependencies]
libc = "0.2.168"

[profile.release]
opt-level = 's'
lto = true
panic = 'abort'
debug = false

[features]
default=["ureq"]
ureq=["dep:ureq"]
west=["dep:reqwest"]